--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,6 +7,7 @@
 <h3>@ViewData["Title"]</h3>
 
 <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+
     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
     <table>
@@ -14,7 +15,7 @@
             <td>FirstName</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.FirstName" class="form" autocomplete="firstname" aria-required="true" />
+                    <input asp-for="Input.FirstName" class="form" autocomplete="firstname" aria-required="true" name="FirstName" value="@Model.userInfo.FirstName" />
                     <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
             </td>
@@ -23,7 +24,7 @@
             <td>LastName</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.LastName" class="form" autocomplete="lastname" aria-required="true" />
+                    <input asp-for="Input.LastName" class="form" autocomplete="lastname" aria-required="true" name="LastName" value="@Model.userInfo.LastName" />
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
             </td>
@@ -32,7 +33,7 @@
             <td>Mobile Phone</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.MobilePhone" class="form" autocomplete="mobilephone" aria-required="true" />
+                    <input asp-for="Input.MobilePhone" class="form" autocomplete="mobilephone" aria-required="true" name="MobilePhone" value="@Model.userInfo.MobilePhone" />
                     <span asp-validation-for="Input.MobilePhone" class="text-danger"></span>
                 </div>
             </td>
@@ -41,7 +42,7 @@
             <td>Username</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.UserName" class="form" autocomplete="username" aria-required="true" />
+                    <input asp-for="Input.UserName" class="form" autocomplete="username" aria-required="true" name="Username" value="@Model.userInfo.Username" />
                     <span asp-validation-for="Input.UserName" class="text-danger"></span>
                 </div>
             </td>
@@ -50,7 +51,7 @@
             <td>Password</td>
             <td>
                 <div class="form-floating">
-                    <input asp-for="Input.Password" class="form" autocomplete="new-password" aria-required="true" />
+                    <input asp-for="Input.Password" class="form" autocomplete="new-password" aria-required="true" name="Password" value="@Model.userInfo.Password" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
             </td>
@@ -63,6 +64,9 @@
     </table>
 
 </form>
+
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
