--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,65 +6,87 @@
 
 <h3>@ViewData["Title"]</h3>
 
-<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4" style="width: 350px; border-radius: 15px; background-color: #e0e0e0;">
+        <h3 class="text-center mb-4">@ViewData["Title"]</h3>
 
-    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+        <form id="account" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
 
-    <table>
-        <tr>
-            <td>FirstName</td>
-            <td>
-                <div class="form-floating">
-                    <input asp-for="Input.FirstName" class="form" autocomplete="firstname" aria-required="true" name="FirstName" value="@Model.userInfo.FirstName" />
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>LastName</td>
-            <td>
-                <div class="form-floating">
-                    <input asp-for="Input.LastName" class="form" autocomplete="lastname" aria-required="true" name="LastName" value="@Model.userInfo.LastName" />
-                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>Mobile Phone</td>
-            <td>
-                <div class="form-floating">
-                    <input asp-for="Input.MobilePhone" class="form" autocomplete="mobilephone" aria-required="true" name="MobilePhone" value="@Model.userInfo.MobilePhone" />
-                    <span asp-validation-for="Input.MobilePhone" class="text-danger"></span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>Username</td>
-            <td>
-                <div class="form-floating">
-                    <input asp-for="Input.UserName" class="form" autocomplete="username" aria-required="true" name="Username" value="@Model.userInfo.Username" />
-                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form" autocomplete="new-password" aria-required="true" name="Password" value="@Model.userInfo.Password" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button id="registerSubmit" type="submit" class="btn btn-primary">Register</button>
-            </td>
-        </tr>
-    </table>
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Useranme</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Username" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
 
-</form>
+            <div class="mb-2">
+                <label asp-for="Input.Password" class="form-label">First name</label>
+                <input asp-for="Input.Password" type="password" class="form-control" placeholder="Enter First name" autocomplete="current-password" aria-required="true" />
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
 
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Last name</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Last name" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Email</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Email" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Phone Number</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Phone number" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Password</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Password" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+            <div class="mb-2">
+                <label asp-for="Input.UserName" class="form-label">Confirm Password</label>
+                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Confirm Password" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+
+            <div class="mt-2 ">
+                <div class="dropdown w-100">
+                    <label asp-for="Input.UserName" class="form-label d-block">Department</label>
+                    <button class="btn btn-primary dropdown-toggle bg-dark text-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        Select Department
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <li><a class="dropdown-item" href="#">Action 1</a></li>
+                        <li><a class="dropdown-item" href="#">Action 2</a></li>
+                        <li><a class="dropdown-item" href="#">Action 3</a></li>
+                    </ul>
+                </div>
+            </div>
+
+
+
+            <div class="mb-3 fs-6">
+                <a href="#" class="text-decoration-none">Forgot Password?</a>
+            </div>
+
+            <button id="login-submit" type="submit" class="btn btn-dark w-100">Sign in</button>
+
+            <div class="text-center mt-3">
+                <span>Don't have an account? <a href="#" class="text-decoration-none">Register</a></span>
+            </div>
+
+
+
+        </form>
+    </div>
+</div>
 
 
 
