RIGเกือบเสร็จละนิสๆๆๆๆๆ

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,7 +15,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    background-color: #DDDDDD;
+    background-color: white;
     color: white;
 }
 
@@ -30,11 +30,42 @@ td {
 .button-container {
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    bottom: 0; /* ปุ่มจะคงอยู่ที่ด้านล่างของ container */
+    z-index: 1;
+    background-color: #e0e0e0;
+    padding: 18px 0;
+    width: 100%;
+    gap: 10px;
+    margin-top: 10px;
+    max-height: calc(100vh - 80px);
+    padding-bottom: 20px;
 }
 
     .button-container .btn {
-        width: 48%; /* หรือปรับตามความเหมาะสม */
+        width: 50%; /* หรือปรับตามความเหมาะสม */
     }
 .form-label {
     color: black;
 }
+
+.scrollable-container {
+    max-height: 400px; /* กำหนดความสูงของคอนเทนเนอร์ */
+    overflow-y:auto; /* ทำให้สามารถเลื่อนขึ้นลงได้ */
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    
+}
+
+
+
+body {
+    font-family: 'Manrope', sans-serif;
+    color: #e0e0e0; /* สามารถเปลี่ยนสีตัวหนังสือได้ตามต้องการ */
+    font-size: 16px; /* ขนาดฟอนต์เริ่มต้น */
+    line-height: 1.5; /* ความสูงบรรทัดเพื่อให้ข้อความอ่านง่ายขึ้น */
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
