--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4" style="width: 350px; border-radius: 15px; background-color: #e0e0e0;">
-        <h3 class="text-center mb-4">@ViewData["Title"]</h3>
+        <h3 class="text-center mb-4" style="color:black" >@ViewData["Title"]</h3>
 
         <form id="account" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
@@ -31,7 +31,7 @@
             <button id="login-submit" type="submit" class="btn btn-dark w-100">Sign in</button>
 
             <div class="text-center mt-3">
-                <span>Don't have an account? <a href="#" class="text-decoration-none">Register</a></span>
+                <span style="color:black">Don't have an account?  <a  href="#" class="text-decoration-none">Register</a></span>
             </div>
         </form>
     </div>
