--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,87 +8,96 @@
 
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4" style="width: 350px; border-radius: 15px; background-color: #e0e0e0;">
-        <h3 class="text-center mb-4">@ViewData["Title"]</h3>
-
-        <form id="account" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Useranme</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Username" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.Password" class="form-label">First name</label>
-                <input asp-for="Input.Password" type="password" class="form-control" placeholder="Enter First name" autocomplete="current-password" aria-required="true" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Last name</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Last name" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Email</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Email" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Phone Number</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Phone number" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Password</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Password" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-
-            <div class="mb-2">
-                <label asp-for="Input.UserName" class="form-label">Confirm Password</label>
-                <input asp-for="Input.UserName" class="form-control" placeholder="Enter Confirm Password" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
+        <h3 class="text-center mb-4" style="color:black">@ViewData["Title"]</h3>
 
 
-            <div class="mt-2 ">
-                <div class="dropdown w-100">
-                    <label asp-for="Input.UserName" class="form-label d-block">Department</label>
-                    <button class="btn btn-primary dropdown-toggle bg-dark text-white w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        Select Department
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="#">Action 1</a></li>
-                        <li><a class="dropdown-item" href="#">Action 2</a></li>
-                        <li><a class="dropdown-item" href="#">Action 3</a></li>
-                    </ul>
+
+
+
+
+        <div class="scrollable-container">
+
+            <form id="account" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
+    
+    
+        
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Useranme</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Username" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
                 </div>
-            </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.Password" class="form-label">First name</label>
+                    <input asp-for="Input.Password" type="password" class="form-control" placeholder="Enter First name" autocomplete="current-password" aria-required="true" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Last name</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Last name" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Email</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Email" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Phone Number</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Phone number" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Password</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Password" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Input.UserName" class="form-label">Confirm Password</label>
+                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Confirm Password" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
 
 
+                <div class="mt-2 ">
+                    <div class="dropdown w-100">
+                        <label asp-for="Input.UserName" class="form-label d-block">Department</label>
+                        <button class="btn btn-primary dropdown-toggle bg-white text-black w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            Select Department
+                        </button>
+                        <ul class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item  w-100" href="#">Action 1</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">Action 2</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">Action 3</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+        
 
           
-            <div class="button-container mt-2">
-                <button class="btn btn-dark">Back to Login</button>
-                <button class="btn btn-dark">Register</button>
-            </div>
+                <div class="button-container mt-3">
+                    <button class="btn btn-dark ">Back to Login</button>
+                    <button class="btn btn-dark ">Register</button>
+                </div>
 
             
 
 
 
-            <div class="text-center mt-3">
+                <div class="text-center mt-3">
                 
-            </div>
+                </div>
 
-
-
-        </form>
+        
+            </form>
+        </div>
     </div>
 </div>
 
