--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,23 +5,18 @@
 }
 
 
-
 <div class="d-flex justify-content-center align-items-center vh-100">
-    <div class="card p-4" style="width: 350px; border-radius: 15px; background-color: #e0e0e0;">
-        <h3 class="text-center mb-4" style="color:black">@ViewData["Title"]</h3>
+    <div class="card p-4" style="width: 480px; border-radius: 15px; background-color: #CECECE;">
+        <h3 class="text-center  "style="color:black">@ViewData["Title"]</h3>
+        <h6 class="text-center mb-2" style="color:black">Connect with your friends today!</h6>
 
 
-
-
-
-
-        <div class="scrollable-container">
-
-            <form id="account" method="post">
+            
+        <form id="account" method="post" class="scrollable-content" style="height: 400px; overflow-y: scroll;">
                 <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
-    
-    
-        
+
+
+
                 <div class="mb-2">
                     <label asp-for="Input.UserName" class="form-label">Useranme</label>
                     <input asp-for="Input.UserName" class="form-control" placeholder="Enter Username" autocomplete="username" aria-required="true" />
@@ -72,34 +67,26 @@
                             Select Department
                         </button>
                         <ul class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item  w-100" href="#">Action 1</a></li>
-                            <li><a class="dropdown-item  w-100" href="#">Action 2</a></li>
-                            <li><a class="dropdown-item  w-100" href="#">Action 3</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">SALE D1</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">SALE D2</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">SALE D3</a></li>
+                            <li><a class="dropdown-item  w-100" href="#">WAREHOUSE</a></li>
                         </ul>
                     </div>
                 </div>
 
-        
-
-          
-                <div class="button-container mt-3">
-                    <button class="btn btn-dark ">Back to Login</button>
-                    <button class="btn btn-dark ">Register</button>
-                </div>
-
-            
 
 
-
-                <div class="text-center mt-3">
-                
-                </div>
-
-        
-            </form>
+        </form>
+        <div class="button-container mt-5 d-flex justify-content-between">
+            <button class="btn btn-dark" style="width:180px">Back to Login</button>
+            <button class="btn btn-dark" style="width:180px">Register</button>
         </div>
+
     </div>
 </div>
+
+
 
 
 
