--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -24,33 +24,33 @@
                 </div>
 
                 <div class="mb-2">
-                    <label asp-for="Input.Password" class="form-label">First name</label>
-                    <input asp-for="Input.Password" type="password" class="form-control" placeholder="Enter First name" autocomplete="current-password" aria-required="true" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <label asp-for="Input.FirstName" class="form-label">First name</label>
+                <input asp-for="Input.FirstName" type="password" class="form-control" placeholder="Enter First name" autocomplete="current-password" aria-required="true" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="mb-2">
-                    <label asp-for="Input.UserName" class="form-label">Last name</label>
-                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Last name" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <label asp-for="Input.LastName" class="form-label">Last name</label>
+                <input asp-for="Input.LastName" class="form-control" placeholder="Enter Last name" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
                 </div>
 
                 <div class="mb-2">
-                    <label asp-for="Input.UserName" class="form-label">Email</label>
-                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Email" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <label asp-for="Input.Email" class="form-label">Email</label>
+                <input asp-for="Input.Email" class="form-control" placeholder="Enter Email" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
 
                 <div class="mb-2">
-                    <label asp-for="Input.UserName" class="form-label">Phone Number</label>
-                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Phone number" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <label asp-for="Input.MobilePhone" class="form-label">Phone Number</label>
+                <input asp-for="Input.MobilePhone" class="form-control" placeholder="Enter Phone number" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.MobilePhone" class="text-danger"></span>
                 </div>
 
                 <div class="mb-2">
-                    <label asp-for="Input.UserName" class="form-label">Password</label>
-                    <input asp-for="Input.UserName" class="form-control" placeholder="Enter Password" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                <label asp-for="Input.Password" class="form-label">Password</label>
+                <input asp-for="Input.Password" class="form-control" placeholder="Enter Password" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
 
                 <div class="mb-2">
@@ -62,7 +62,7 @@
 
                 <div class="mt-2 ">
                     <div class="dropdown w-100">
-                        <label asp-for="Input.UserName" class="form-label d-block">Department</label>
+                    <label asp-for="Input.Department" class="form-label d-block">Department</label>
                         <button class="btn btn-primary dropdown-toggle bg-white text-black w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             Select Department
                         </button>
