--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿﻿@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@401&display=swap');
 
 html {
     font-size: 14px;
@@ -10,15 +10,21 @@ html {
     }
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
     margin-bottom: 60px;
     background-color: white;
-    color: white;
+    color: black; /* Set color to black for visibility */
+    font-family: 'Manrope', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h1 {
+    font-weight: 800; /* Extra bold */
+}
+
+p {
+    font-weight: 400; /* Regular */
 }
 
 th {
@@ -29,13 +35,11 @@ td {
     color: Black;
 }
 
-}
-
 .button-container {
     display: flex;
     justify-content: space-between;
     position: sticky;
-    bottom: 0; /* ปุ่มจะคงอยู่ที่ด้านล่างของ container */
+    bottom: 0;
     z-index: 1;
     background-color: #e0e0e0;
     padding: 18px 0;
@@ -47,33 +51,15 @@ td {
 }
 
     .button-container .btn {
-        width: 50%; /* หรือปรับตามความเหมาะสม */
+        width: 50%;
     }
 
 .form-label {
     color: black;
 }
 
-.manrope-<uniquifier > {
-    font-family: "Manrope", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-}
-
-body {
-    font-family: "Manrope", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    /*font-family: 'Manrope', sans-serif;
-    color: #e0e0e0;*/ /* สามารถเปลี่ยนสีตัวหนังสือได้ตามต้องการ */
-    /*font-size: 16px;*/ /* ขนาดฟอนต์เริ่มต้น */
-    /*line-height: 1.5;*/ /* ความสูงบรรทัดเพื่อให้ข้อความอ่านง่ายขึ้น */
-}
-
 .scrollable-content {
-    overflow-y: scroll; /* Enables scrolling */
+    overflow-y: scroll;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
     padding: 10px;
