What is Going On I have No Fucking Clue - Login Functionality not work!!!!

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LoginModel
+@model FinalProject.Pages.LoginModel
 
 @{
     ViewData["Title"] = "Log in";
@@ -31,7 +31,7 @@
             <button id="login-submit" type="submit" class="btn btn-dark w-100">Sign in</button>
 
             <div class="text-center mt-3">
-                <span>Don't have an account? <a asp-area="Identity" asp-page="/Account/Register" class="text-decoration-none">Register</a></span>
+                <span>Don't have an account? <a href="#" class="text-decoration-none">Register</a></span>
             </div>
         </form>
     </div>
