--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿﻿@page
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -9,7 +9,7 @@
         <h3 class="text-center" style="color:black">@ViewData["Title"]</h3>
 
         <!-- Form Section -->
-        <form id="account" method="post"  class="scrollable-content mb-3" style="height: 320px; overflow-y: auto;">
+        <form id="account" method="post"  class="scrollable-content mb-3" style="height: 350px; overflow-y: auto;">
             <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
 
             <div class="mb-2">
@@ -70,7 +70,7 @@
         <!-- Static Buttons Section -->
         
             
-        <div class="button-container mt-3 d-flex justify-content-between" style="background-color: #CECECE">
+        <div class="button-container mt-3 d-flex justify-content-between">
             <a class="btn btn-dark" style="width:180px" asp-area="Identity" asp-page="/Account/Login">Back to Login</a>
 
             <button id="registerSubmit" class="btn btn-dark" style="width:180px" onclick="submitForm()">Register</button>
@@ -90,4 +90,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-
